--- a/.env
+++ b/.env
@@ -24,12 +24,12 @@ REDIS_PASSWORD=null
 REDIS_PORT=6379
 
 MAIL_DRIVER=smtp
-MAIL_HOST=mail.cornerstoneretail.co.uk
+MAIL_HOST=smtp.ionos.co.uk # mail.cornerstoneretail.co.uk 
 MAIL_PORT=587
-MAIL_USERNAME=garry.owen@cornerstoneretail.co.uk
-MAIL_PASSWORD=$tone@321
+MAIL_USERNAME=notifications@ereceptionhub.co.uk #garry.owen@cornerstoneretail.co.uk
+MAIL_PASSWORD=Hilary97$ #$tone@321
 MAIL_ENCRYPTION=tls
-MAIL_FROM_ADDRESS=garry.owen@cornerstoneretail.co.uk
+MAIL_FROM_ADDRESS=notifications@ereceptionhub.co.uk #garry.owen@cornerstoneretail.co.uk
 MAIL_FROM_NAME="${APP_NAME}"
 
 AWS_ACCESS_KEY_ID=
